headers/winged_edge.h


typedef struct Tetrahedron      TetrahedronSneak;
typedef struct WEVertex         WEVertex;
typedef struct WEEdge           WEEdge;
typedef struct WEFace           WEFace;
typedef struct WEVertexClass    WEVertexClass;
typedef struct WEEdgeClass      WEEdgeClass;
typedef struct WEFaceClass      WEFaceClass;
typedef struct WEPolyhedron     WEPolyhedron;
struct WEVertex
{
    O31Vector       x;
    O31Vector       xx;
    double          dist;
    Boolean         ideal;
    double          solid_angle;
    WEVertexClass   *v_class;
    Boolean         visible;
    double          distance_to_plane;
    int             which_side_of_plane;
    int             zero_order;
    WEVertex        *prev,
                    *next;
};
struct WEEdge
{
    WEVertex        *v[2];
    WEEdge          *e[2][2];
    WEFace          *f[2];
    double          dihedral_angle;
    double          dist_line_to_origin,
                    dist_edge_to_origin;
    O31Vector       closest_point_on_line,
                    closest_point_on_edge;
    double          length;
    WEEdgeClass     *e_class;
    Boolean         visible;
    WEEdge          *neighbor[2];
    Boolean         preserves_sides[2],
                    preserves_direction[2],
                    preserves_orientation[2];
    TetrahedronSneak    *tet[2][2];
    WEEdge          *prev,
                    *next;
};
struct WEFace
{
    WEEdge          *some_edge;
    WEFace          *mate;
    O31Matrix       *group_element;
    double          dist;
    O31Vector       closest_point;
    Boolean         to_be_removed;
    Boolean         clean;
    Boolean         copied;
    Boolean         matched;
    Boolean         visible;
    int             num_sides;
    WEFaceClass     *f_class;
    WEFace          *prev,
                    *next;
};
struct WEVertexClass
{
    int             index;
    double          hue;
    int             num_elements;
    double          solid_angle;
    int             singularity_order;
    Boolean         ideal;
    double          dist;
    double          min_dist,
                    max_dist;
    WEVertexClass   *belongs_to_region;
    Boolean         is_3_ball;
    WEVertexClass   *prev,
                    *next;
};
struct WEEdgeClass
{
    int             index;
    double          hue;
    int             num_elements;
    double          dihedral_angle;
    int             singularity_order;
    double          dist_line_to_origin,
                    dist_edge_to_origin;
    double          length;
    Orbifold2       link;
    double          min_line_dist,
                    max_line_dist;
    double          min_length,
                    max_length;
    Boolean         removed;
    WEEdgeClass     *prev,
                    *next;
};
struct WEFaceClass
{
    int             index;
    double          hue;
    int             num_elements;
    double          dist;
    MatrixParity    parity;
    WEFaceClass     *prev,
                    *next;
};
struct WEPolyhedron
{
    int             num_vertices,
                    num_edges,
                    num_faces;
    int             num_finite_vertices,
                    num_ideal_vertices;
    int             num_vertex_classes,
                    num_edge_classes,
                    num_face_classes;
    int             num_finite_vertex_classes,
                    num_ideal_vertex_classes;
    double          approximate_volume;
    double          inradius,
                    outradius;
    double          spine_radius;
    double          deviation;
    double          geometric_Euler_characteristic;
    double          vertex_epsilon;
    WEVertex        vertex_list_begin,
                    vertex_list_end;
    WEEdge          edge_list_begin,
                    edge_list_end;
    WEFace          face_list_begin,
                    face_list_end;
    WEVertexClass   vertex_class_begin,
                    vertex_class_end;
    WEEdgeClass     edge_class_begin,
                    edge_class_end;
    WEFaceClass     face_class_begin,
                    face_class_end;
};