headers/SnapPea.h


typedef int SolutionType;
enum
{
    not_attempted,          
    geometric_solution,     
    nongeometric_solution,  
    flat_solution,          
    degenerate_solution,    
    other_solution,         
    no_solution             
};
typedef struct
{
    double  real,
            imag;
} Complex;
typedef unsigned char   Boolean;
typedef int MatrixParity;
enum
{
    orientation_reversing = 0,
    orientation_preserving = 1
};
typedef Complex SL2CMatrix[2][2];
typedef double O31Matrix[4][4];
typedef double GL4RMatrix[4][4];
typedef double O31Vector[4];
typedef int MatrixInt22[2][2];
typedef struct
{
    int         num_torsion_coefficients;   
    long int    *torsion_coefficients;      
} AbelianGroup;
typedef int Orbifold1;
enum
{
    orbifold1_unknown,
    orbifold_s1,    
    orbifold_mI     
};
typedef int Orbifold2;
enum
{
    orbifold_nn,    
    orbifold_no,    
    orbifold_xnn,   
    orbifold_2xn,   
    orbifold_22n    
};
typedef struct
{
    Complex         length;
    MatrixParity    parity;
    Orbifold1       topology;
    int             multiplicity;
} MultiLength;
typedef int DirichletInteractivity;
enum
{
    Dirichlet_interactive,
    Dirichlet_stop_here,
    Dirichlet_keep_going
};
typedef struct Triangulation                Triangulation;
typedef struct GroupPresentation            GroupPresentation;
extern void compress_abelian_group(AbelianGroup *g);
extern void free_abelian_group(AbelianGroup *g);
Triangulation *construct_cover( Triangulation           *base_manifold,
                                RepresentationIntoSn    *representation,
                                int                     n);
extern WEPolyhedron *Dirichlet_from_generators(
                O31Matrix               generators[],
                int                     num_generators,
                double                  vertex_epsilon,
                DirichletInteractivity  interactivity,
                Boolean                 maximize_injectivity_radius);
extern GroupPresentation *fundamental_group(
                    Triangulation   *manifold,
                    Boolean         simplify_presentation,
                    Boolean         fillings_may_affect_generators,
                    Boolean         minimize_number_of_generators);
extern int fg_get_num_generators(GroupPresentation *group);
extern Boolean fg_integer_fillings(GroupPresentation *group);
extern int fg_get_num_relations(GroupPresentation *group);
extern int  *fg_get_relation(   GroupPresentation   *group,
                                int                 which_relation);
extern void fg_free_relation(int *relation);
extern int  *fg_get_original_generator( GroupPresentation   *group,
                                        int                 which_generator);
extern AbelianGroup *homology(Triangulation *manifold);
extern AbelianGroup *homology_from_fundamental_group(
    GroupPresentation *group);
extern int  get_num_tetrahedra(Triangulation *manifold);
extern void length_spectrum(    WEPolyhedron    *polyhedron,
                                double          cutoff_length,
                                Boolean         full_rigor,
                                Boolean         multiplicities,
                                double          user_radius,
                                MultiLength     **spectrum,
                                int             *num_lengths);
RepresentationList *find_representations(   Triangulation       *manifold,
                                            int                 n,
                                            PermutationSubgroup range);
void free_representation_list(
    RepresentationList *representation_list);
void free_representation(
     RepresentationIntoSn *representation,
     int                  num_generators,
     int                  num_cusps);