orb2/headers/Orb.h

SNAPPEA_LINKAGE_SCOPE_OPEN
SNAPPEA_NAMESPACE_SCOPE_OPEN
typedef struct Cusp Cusp;
typedef struct Tetrahedron Tetrahedron;
extern SolutionType find_structure( Triangulation *manifold, Boolean manual ); 
extern double my_volume(Triangulation *manifold, Boolean *ok ); 
extern void compute_reflection( int index, O31Matrix gen, GL4RMatrix basis ); 