cython/Orb.pyx

ctypedef double Real

cdef extern from "stdlib.h":
    ctypedef unsigned long size_t
    void* malloc(size_t size)
    void free(void *mem)

cdef extern from "SnapPea.h":
    ctypedef char Boolean

    ctypedef struct Real_struct:
        Real x

    ctypedef struct Complex:
        Real real
        Real imag

    ctypedef enum c_Orbifold1 "Orbifold1":
        orbifold1_unknown
        orbifold_s1
        orbifold_mI


    ctypedef enum Orbifold2:
        orbifold_nn
        orbifold_no
        orbifold_xnn
        orbifold_2xn
        orbifold_22n

    ctypedef int MatrixInt22[2][2]
    ctypedef Real GL4RMatrix[4][4]
    ctypedef Real O31Matrix[4][4]
    ctypedef Real_struct O31Vector[4]
    ctypedef Complex SL2CMatrix[2][2]

    ctypedef enum c_MatrixParity "MatrixParity":
        orientation_reversing = 0
        orientation_preserving = 1

    ctypedef enum CoveringType:
        unknown_cover
        irregular_cover
        regular_cover
        cyclic_cover


    ctypedef enum PermutationSubgroup:
        permutation_subgroup_Zn
        permutation_subgroup_Sn

    ctypedef struct MultiLength:
        Complex length
        c_MatrixParity parity
        c_Orbifold1 topology
        int multiplicity


    ctypedef struct RepresentationIntoSn:
        int** image
        int** primitive_Dehn_image
        CoveringType covering_type
        RepresentationIntoSn* next
    ctypedef struct RepresentationList:
        int num_generators
        int num_sheets
        int num_cusps
        RepresentationIntoSn* list
    ctypedef struct c_AbelianGroup "AbelianGroup":
        int num_torsion_coefficients
        long int *torsion_coefficients

    ctypedef struct c_GroupPresentation "GroupPresentation"

    extern int fg_get_num_generators(c_GroupPresentation *group) except *
    extern int fg_get_num_orig_gens(c_GroupPresentation *group) except *
    extern Boolean fg_integer_fillings(c_GroupPresentation *group) except *
    extern int fg_get_num_relations(c_GroupPresentation *group) except *
    extern int *fg_get_relation(c_GroupPresentation *group, int which_relation) except *
    extern void fg_free_relation(int *relation) except *
    extern int *fg_get_original_generator(c_GroupPresentation *group, int which_generator) except *
    extern int  *fg_get_word_moves(c_GroupPresentation *group) except *

    extern RepresentationList *find_representations(c_Triangulation *manifold, int n,PermutationSubgroup range) except *
    extern void free_representation_list(RepresentationList *representation_list) except *
    extern void free_representation(RepresentationIntoSn *representation, int num_generators, int num_cusps) except *
    extern c_Triangulation *construct_cover(c_Triangulation *base_manifold, RepresentationIntoSn *representation, int num_generators, int n) except *
    extern c_AbelianGroup *homology(c_Triangulation *manifold) except *
    extern void compress_abelian_group(c_AbelianGroup *g) except *
    extern void free_abelian_group(c_AbelianGroup *g) except *
    extern c_GroupPresentation *fundamental_group(c_Triangulation *manifold, Boolean simplify_presentation, Boolean fillings_may_affect_generators, Boolean minimize_number_of_generators) except *
    extern c_AbelianGroup *homology_from_fundamental_group(c_GroupPresentation *group) except *

    extern Real get_matrix_entry( c_GroupPresentation *fg, int i, int j, int k )

    extern void compute_reflection( int index, O31Matrix gen, GL4RMatrix basis )

    ctypedef enum DirichletInteractivity:
        Dirichlet_interactive
        Dirichlet_stop_here
        Dirichlet_keep_going

    extern WEPolyhedron *Dirichlet_from_generators(
                                O31Matrix                               *generators,
                                int                                             num_generators,
                                Real                                  vertex_epsilon,
                                DirichletInteractivity  interactivity,
                                Boolean                                 maximize_injectivity_radius)

cdef extern from "triangulation.h":
    ctypedef struct Cusp:
        Boolean is_complete
        Real m
        Real l
        int index
        Real inner_product[4]
        Cusp* next

    ctypedef struct c_Tetrahedron "Tetrahedron":
        int index
        Real Gram_matrix[4][4]
        c_Tetrahedron *next
        Cusp *cusp[4]
        Real basis[4][4]

cdef extern from "SnapPea.h":
    ctypedef struct EdgeClass:
        EdgeClass* prev
        EdgeClass* next
        int order

    ctypedef struct c_Triangulation "Triangulation":
        c_Tetrahedron  tet_list_begin
        c_Tetrahedron  tet_list_end
        EdgeClass edge_list_begin
        EdgeClass edge_list_end
        Cusp cusp_list_begin
        Cusp cusp_list_end
        int num_generators
        int num_tetrahedra

    ctypedef enum c_SolutionType "SolutionType":
        not_attempted
        geometric_solution
        nongeometric_solution
        flat_solution
        degenerate_solution
        other_solution
        no_solution
        externally_computed

    extern int get_num_tetrahedra(c_Triangulation *manifold) except *

    extern c_SolutionType find_structure( c_Triangulation *manifold, Boolean manual )

    extern double my_volume( c_Triangulation *manifold, Boolean *ok)

    extern void length_spectrum(	WEPolyhedron	*polyhedron,
                                        Real			cutoff_length,
                                        Boolean			full_rigor,
                                        Boolean			multiplicities,
                                        Real			user_radius,
                                        MultiLength		**spectrum,
                                        								int				*num_lengths)



cdef extern from "winged_edge.h":
    ctypedef struct TetrahedronSneak
    ctypedef struct WEVertexClass
    ctypedef struct WEEdgeClass
    ctypedef struct WEFaceClass
    ctypedef struct WEVertex
    ctypedef struct WEEdge
    ctypedef struct WEFace
    ctypedef struct WEVertexClass:
        int index
        Real hue
        int num_elements
        Real solid_angle
        int singularity_order
        Boolean ideal
        Real dist
        Real min_dist
        Real max_dist
        WEVertexClass *belongs_to_region
        Boolean is_3_ball
        WEVertexClass *prev
        WEVertexClass *next
    ctypedef struct WEEdgeClass:
        int index
        Real hue
        int num_elements
        Real dihedral_angle
        int singularity_order
        Real dist_line_to_origin
        Real dist_edge_to_origin
        Real length
        Orbifold2 link
        Real min_line_dist
        Real max_line_dist
        Real min_length
        Real max_length
        Boolean removed
        WEEdgeClass *prev
        WEEdgeClass *next
    ctypedef struct WEFaceClass:
        int index
        Real hue
        int num_elements
        Real dist
        c_MatrixParity parity
        WEFaceClass *prev
        WEFaceClass *next
    ctypedef struct WEVertex:
        O31Vector x
        O31Vector xx
        Real dist
        Boolean ideal
        Real solid_angle
        WEVertexClass *v_class
        Boolean visible
        Real distance_to_plane
        int which_side_of_plane
        int zero_order
        WEVertex *prev
        WEVertex *next
    ctypedef struct WEFace:
        WEEdge *some_edge
        WEFace *mate
        O31Matrix *group_element
        Real dist
        O31Vector closest_point
        Boolean to_be_removed
        Boolean clean
        Boolean copied
        Boolean matched
        Boolean visible
        int num_sides
        WEFaceClass *f_class
        WEFace *prev
        WEFace *next
    ctypedef struct WEEdge:
        WEVertex *v[2]
        WEEdge *e[2][2]
        WEFace *f[2]
        Real dihedral_angle
        Real dist_line_to_origin
        Real dist_edge_to_origin
        O31Vector closest_point_on_line
        O31Vector closest_point_on_edge
        Real length
        WEEdgeClass *e_class
        Boolean visible
        WEEdge *neighbor[2]
        Boolean preserves_sides[2]
        Boolean preserves_direction[2]
        Boolean preserves_orientation[2]
        TetrahedronSneak *tet[2][2]
        WEEdge *prev
        WEEdge *next    

    ctypedef struct WEPolyhedron:
        int num_vertices
        int num_edges
        int num_faces
        int num_finite_vertices
        int num_ideal_vertices
        int num_vertex_classes
        int num_edge_classes
        int num_face_classes
        int num_finite_vertex_classes
        int num_ideal_vertex_classes
        Real approximate_volume
        Real inradius
        Real outradius
        Real spine_radius
        Real deviation
        Real geometric_Euler_characteristic
        double vertex_epsilon
        WEVertex vertex_list_begin
        WEVertex vertex_list_end
        WEEdge edge_list_begin
        WEEdge edge_list_end
        WEFace face_list_begin
        WEFace face_list_end
        WEVertexClass vertex_class_begin
        WEVertexClass vertex_class_end
        WEEdgeClass edge_class_begin
        WEEdgeClass edge_class_end
        WEFaceClass face_class_begin
        WEFaceClass face_class_end

cdef extern from "unix_file_io.h":
    extern c_Triangulation *get_triangulation(char *file_name)

cdef extern from "casson_typedefs.h":
    ctypedef struct c_CassonFormat "CassonFormat":
        pass
    
cdef extern from "casson.h":
    extern c_Triangulation *casson_to_triangulation(c_CassonFormat *)
    extern Boolean verify_casson(c_CassonFormat *)
    extern void free_casson(c_CassonFormat *)

cdef extern from "parse_orb.h":
    extern void read_orb(const char * file_name, char **name, c_CassonFormat ** cf, char ** orb_link_projection_data)

cdef extern from "graph_complement.h":
    ctypedef struct c_Graph "Graph":
        pass

    extern c_Triangulation *triangulate_graph_complement(c_Graph *gamma, Boolean remove_vertices)

cdef extern from "diagram_to_trig.h":
    extern c_Triangulation *diagram_data_to_triangulation(const char *d)

# Types of covering spaces
cover_types = {1:"irregular", 2:"regular", 3:"cyclic"}

cdef class Orbifold(object):
    """

    Some quick tests:

    >>> from snappy import Triangulation
    >>> from snappy.dev.orb_test import __path__ as test_dirs
    >>> import tempfile, os

    >>> test_dir = test_dirs[0]
    >>> dir_obj = tempfile.TemporaryDirectory()
    >>> tmp_dir = dir_obj.name

    >>> o = Orbifold(snappea_path = os.path.join(test_dir, "m004.tri").encode())
    >>> o.num_tetrahedra()
    2
    >>> o.homology() # m004.tri
    [0]
    >>> o.fundamental_group()
    [2, 1, [[1, 1, -2, -1, 2, 2, 2, -1, -2]]]
